new file replaced

--- a/movie-recommender/movie-recommender-system.ipynb
+++ b/movie-recommender/movie-recommender-system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 1,
    "id": "0a5e3e35-3c8b-43ac-8478-69f0f7d06f17",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 2,
    "id": "21769006-2c74-4103-a48a-bec5eeaf4a3f",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 3,
    "id": "43a3d600-7953-4106-99d9-37b6780bcbbf",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 4,
    "id": "09cd94b4-1785-4786-9d28-8db6319c4672",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 5,
    "id": "ac3ce8a7-d756-4c4a-8fd4-10c9c238d02c",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 6,
    "id": "64f9152c-3490-4505-9646-ac34193e9dde",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 7,
    "id": "87b361da-7710-42af-a00b-a8ffcbd92deb",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 314,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 8,
    "id": "d2604414-7183-422e-9081-69aa3c31b6d3",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 9,
    "id": "976a0c02-788d-486f-aa02-4aaf1d5a9525",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 10,
    "id": "c76a0460-acdc-425a-b6f1-f504efea17dc",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "0"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 11,
    "id": "14842dff-eb50-47a8-bfc7-ba0c8e74c117",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "'[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]'"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 12,
    "id": "1c7417e5-7068-4dfd-baf8-6f3bdc119aed",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 13,
    "id": "c21f4cb8-29ec-49e9-a81c-ad592d08329d",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 14,
    "id": "0ed54807-31ea-4931-9006-196224757675",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 15,
    "id": "c6077eed-92c7-4edb-95e4-202f3bbc100c",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
        "Name: keywords, dtype: object"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 16,
    "id": "977566de-8548-4859-b357-5265d3ca1116",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 17,
    "id": "9069dfd0-645b-42b3-a936-854a06827ada",
    "metadata": {
     "scrolled": true
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 18,
    "id": "14bba297-69ce-4015-ac83-3ed91020b5d2",
    "metadata": {},
    "outputs": [
@@ -817,7 +817,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 325,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 19,
    "id": "a1922111-8c4e-4bcb-a9dd-0aa27d989e97",
    "metadata": {},
    "outputs": [],
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 20,
    "id": "1ce4c1b3-928a-4c14-93a0-825eda34927c",
    "metadata": {},
    "outputs": [],
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 21,
    "id": "a6d213b5-26f2-49a0-a366-a27b5af57ae6",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
        "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]     [Andrew Stanton]  "
       ]
      },
-     "execution_count": 328,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 22,
    "id": "647c82ac-f884-4d22-b0ce-63be3ddbf7c5",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 23,
    "id": "b8126a0f-493d-4eee-adb7-7cef208c72fc",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]     [Andrew Stanton]  "
       ]
      },
-     "execution_count": 330,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 24,
    "id": "79cec923-cd12-4e98-8764-f8e68d92c3d7",
    "metadata": {},
    "outputs": [],
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 25,
    "id": "b81f5df9-9ee9-4a81-ae19-f8ca96a0e462",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1277,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 332,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 26,
    "id": "d825c95c-d25c-4e43-8eed-200d3de09ae7",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 27,
    "id": "eccb306e-d4a7-40cd-8f3c-674f360b221d",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1437,7 @@
        "4  [John, Carter, is, a, war-weary,, former, mili...  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 28,
    "id": "06837ffa-f6d8-460c-9305-3cb87979981c",
    "metadata": {},
    "outputs": [],
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 29,
    "id": "d0967e09-5585-4794-8023-e7c9b4d89aae",
    "metadata": {},
    "outputs": [],
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 30,
    "id": "82859e80-bbd7-4dc0-b1bd-72e23942411b",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1549,7 @@
        "4  John Carter is a war-weary, former military ca...  "
       ]
      },
-     "execution_count": 337,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 31,
    "id": "de6fb496-63d4-462c-9fb7-31a1b8d61eb3",
    "metadata": {},
    "outputs": [],
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 32,
    "id": "d50e7af5-060f-48a8-a2cf-38bc4a71207c",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "03026380-e73e-4efc-8966-463a28197b7c",
    "metadata": {},
    "outputs": [],
@@ -1595,17 +1595,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "ae796c64-1961-4e21-9188-d45ccd79570b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'in the 22nd century, a parapleg marin is dispatch to the moon pandora on a uniqu mission, but becom torn between follow order and protect an alien civilization. action adventur fantasi sciencefict cultureclash futur spacewar spacecoloni societi spacetravel futurist romanc space alien tribe alienplanet cgi marin soldier battl loveaffair antiwar powerrel mindandsoul 3d samworthington zoesaldana sigourneyweav jamescameron'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_df['tags'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "619e23ca-c916-46cf-9094-eee393103a23",
    "metadata": {},
    "outputs": [],
@@ -1615,17 +1626,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "2dc40690-fcc6-48b2-9668-3dc9175768c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>in the 22nd century, a parapleg marin is dispa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>captain barbossa, long believ to be dead, ha c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>206647</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>a cryptic messag from bond’ past send him on a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49026</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>follow the death of district attorney harvey d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49529</td>\n",
+       "      <td>John Carter</td>\n",
+       "      <td>john carter is a war-weary, former militari ca...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                                     title  \\\n",
+       "0     19995                                    Avatar   \n",
+       "1       285  Pirates of the Caribbean: At World's End   \n",
+       "2    206647                                   Spectre   \n",
+       "3     49026                     The Dark Knight Rises   \n",
+       "4     49529                               John Carter   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  in the 22nd century, a parapleg marin is dispa...  \n",
+       "1  captain barbossa, long believ to be dead, ha c...  \n",
+       "2  a cryptic messag from bond’ past send him on a...  \n",
+       "3  follow the death of district attorney harvey d...  \n",
+       "4  john carter is a war-weary, former militari ca...  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ef70a556-2cf9-448c-aec6-fb34f4cbcd52",
    "metadata": {},
    "outputs": [],
@@ -1636,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "b2186ac1-e00c-4ec4-a143-584ddaf528b9",
    "metadata": {},
    "outputs": [],
@@ -1646,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9aa5be8d-8778-478e-8920-4e25667cfc7f",
    "metadata": {},
    "outputs": [],
@@ -1656,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6e7d75b9-5bf2-44ea-9623-b80b13e7e28c",
    "metadata": {},
    "outputs": [],
@@ -1666,17 +1759,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "fe4c89be-ad37-4cb5-89e5-7d5b99b17b7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1214, 0.28676966733820225),\n",
+       " (2405, 0.26901379342448517),\n",
+       " (3728, 0.2605130246476754),\n",
+       " (507, 0.255608593705383),\n",
+       " (539, 0.25038669783359574)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sorted(list(enumerate(similarity[0])),reverse = True,key = lambda x:x[1])[1:6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "aa21dc99-e766-4df8-b702-40c366dba24f",
    "metadata": {},
    "outputs": [],
@@ -1697,27 +1805,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "38dd02e5-a77d-4d51-ad7b-dcab3f2563ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juliet and Alfa Romeo\n",
+      "What's Eating Gilbert Grape\n",
+      "The Legend of Hercules\n",
+      "At First Sight\n",
+      "Cyrus\n"
+     ]
+    }
+   ],
    "source": [
     "recommend('forrest gump')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "eb6b1ec4-60f1-45b7-bff4-cd60328ac59e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aliens vs Predator: Requiem\n",
+      "Aliens\n",
+      "Falcon Rising\n",
+      "Independence Day\n",
+      "Titan A.E.\n"
+     ]
+    }
+   ],
    "source": [
     "recommend('avatar')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "56f6ec25-d92d-4f6c-bfcb-259756e92712",
    "metadata": {},
    "outputs": [],
@@ -1727,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "dda548f6-a7e5-4125-a9fe-7f22dd00aa0a",
    "metadata": {},
    "outputs": [],
@@ -1737,17 +1869,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "3c21b45b-8572-45f3-b39a-b0cbcb9f5b13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Avatar', \"Pirates of the Caribbean: At World's End\", 'Spectre',\n",
+       "       ..., 'Signed, Sealed, Delivered', 'Shanghai Calling',\n",
+       "       'My Date with Drew'], dtype=object)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_df['title'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "731543b5-bef6-4f56-a805-441c97ffc754",
    "metadata": {},
    "outputs": [],
@@ -1757,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "184908fe-0a04-44a2-81b2-6a12190058be",
    "metadata": {},
    "outputs": [],
